# realtime-chatbot

./: .env.example  .gitignore  README.md  config.example.json  database_engine.py  generate_audio.py  main.py  pyproject.toml  service_registry.py  websocket_test.py
app/: .gitignore  pubspec.yaml
app/android/: build.gradle.kts
app/android/app/: build.gradle.kts
app/assets/live2d/: .gitignore  README.md  copy_resources.js  index.html  package-lock.json  package.json  restore_placeholders.js  tsconfig.json  vite.config.mts
app/ios/Runner/: Info.plist
app/lib/: main.dart
app/lib/pages/: call_page.dart  camera_capture_page.dart  chat_detail_page.dart  chat_page.dart  gallery_picker_page.dart  live2d_call_page.dart  live2d_demo_page.dart  live2d_model_page.dart  reference_audio_page.dart  session_list_page.dart  settings_page.dart
app/lib/services/: api_service.dart  audio_player.dart  audio_recorder.dart  config.dart  live2d_model_service.dart  live2d_server.dart  (+5 more)
model/: chatbot_session.py  mcp_model.py  reference_audio.py  timestamp.py
router/: chatbot_session_router.py  reference_audio_router.py
service/asr/: sensevoice_service.py  whisper_service.py
service/chatbot/: llm_api_service.py
service/tts/: qwen_tts_service.py
utils/: agent_tool_manager.py  audio_utils.py  auth.py  chatbot_session_utils.py  client_request_manager.py  latency_tracer.py  text_sanitizer.py  tool_manager_registry.py
utils/tool_call/: agent_tool_manager.py  mcp_tool_manager.py  tool_manager_proxy.py  tool_manager_registry.py
utils/tools/: weather_search.py  web_search.py
(+20 files in other folders)
