[project]
name = "realtime-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.2",
    "faster-qwen3-tts>=0.2.4",
    "faster-whisper>=1.2.1",
    "funasr>=1.3.1",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
